--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,6 +8,7 @@
 
 <table>
     <thead>
+    <th>ID</th>
     <th>Nombre</th>
     <th>Apellido</th>
     <th>Edad</th>
@@ -26,6 +27,9 @@
 
 <form th:action = "@{/insertarEstudiante}">
     <input type="submit" value="Insertar nuevo Estudiante">
+</form><br>
+<form th:action = "@{/editarEstudiante}">
+    <input type="submit" value="Editar Estudiante">
 </form><br>
 <form th:action="@{/borrarEstudiante}" method="post">
     <label>Borrar estudiante por codigo: </label>
